Accessibility: fixed color contrast

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -171,3 +171,7 @@ li.page-item.active button {
   background-color: #0058E6 !important;
   border-color: #0058E6 !important;
 }
+
+li.page-item button.page-link {
+  color: #0058E6;
+}
